# magneticfielddb

./: .gitignore  LICENSE  MANIFEST.in  Makefile  OneSizeFitsAllEquilibrium.nb  README.md  __init__.py  geometry_diag.cpp  geometry_diag.ipynb  geometry_diag.json  geometry_diag.sh  magneticfielddb.py  normalize_params.cpp  polynomial_field.py  polynomial_fit.ipynb  pyproject.toml  q-profiles.ipynb  setup.py  test_magneticfielddb.py
.github/workflows/: test.yml
data/: circular.json  enrx_tcv.json  enrx_torpex.json  guenther.json  toroidal.json
data/COMPASS/: Iconst.json  Iconst_woX.json  Iconst_woX_circ.json  compass_-1X.json  compass_-2X.json  compass_1X.json  compass_2X.json  woX_Taylor.json  woX_circ_Taylor.json
data/TJ-K/: Iconst.json  Iconst_elong.json  Iconst_elong_d_e_AUG.json  Taylor.json  Taylor_d_e.json  Taylor_elong.json  elong_Taylor.json  rfp_elong.json  woX_Taylor.json  woX_rfp_elong.json
magneticfielddb-data/: enrx_tcv.json  enrx_torpex.json  toroidal.json
magneticfielddb-data/AUG/: Iconst_Te_70eV_B0_2T.json  falchetto_Iconst_Te_150eV_B0_2T.json
magneticfielddb-data/COMPASS/: compass_-1X.json
magneticfielddb-data/TJ-K/: Iconst.json  Iconst_elong_d_e_AUG.json  Taylor_circ.json  rfp_elong.json  woX_rfp_elong.json
